[tool.poetry]
name = "comfyui-learn"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = { version = "^2.3.0", source = "torch" }
torchvision = { version = "^0.18.0", source = "torch" }
torchaudio = { version = "^2.3.0", source = "torch" }
torchsde = "^0.2.6"
einops = "^0.8.0"
transformers = ">=4.28.1"
safetensors = ">=0.3.0"
aiohttp = "^3.9.5"
pyyaml = "^6.0.1"
pillow = ">=9.4.0"
scipy = "^1.13.0"
tqdm = "^4.66.4"
psutil = "^5.9.8"
kornia = ">=0.6.9"
xformers = {version = "0.0.26.post1", source = "torch"}
matplotlib = "^3.9.0"
opencv-python = "^4.9.0.80"
simpleeval = "^0.9.13"
insightface = "^0.7.3"
facexlib = "^0.3.0"
timm = "^1.0.3"
onnxruntime = "^1.18.0"
fsspec = ">=2023.4.0"
open-clip-torch = ">=2.17.1"
pytorch-lightning = ">=2.2.1"
omegaconf = "^2.3.0"
accelerate = "^0.30.1"
apex = "^0.9.10.dev0"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
